--- a/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
+++ b/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
@@ -7,122 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Templates\BuildingBlocks\Messaging.Udp\**" />
-    <EmbeddedResource Remove="Templates\BuildingBlocks\Messaging.Udp\**" />
-    <None Remove="Templates\BuildingBlocks\Messaging.Udp\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="Templates\Angular\app.component.spec.txt" />
-    <None Remove="Templates\Angular\app.component.txt" />
-    <None Remove="Templates\Angular\component-store.txt" />
-    <None Remove="Templates\Angular\Components\App\Component.txt" />
-    <None Remove="Templates\Angular\Components\App\Html.txt" />
-    <None Remove="Templates\Angular\Components\App\Scss.txt" />
-    <None Remove="Templates\Angular\Components\App\Spec.txt" />
-    <None Remove="Templates\Angular\Components\Control\Component.txt" />
-    <None Remove="Templates\Angular\Components\Control\Html.txt" />
-    <None Remove="Templates\Angular\Components\Default\Component.txt" />
-    <None Remove="Templates\Angular\Components\Default\Html.txt" />
-    <None Remove="Templates\Angular\Components\Dialog\Component.txt" />
-    <None Remove="Templates\Angular\Components\Dialog\Html.txt" />
-    <None Remove="Templates\Angular\Components\Dialog\Scss.txt" />
-    <None Remove="Templates\Angular\Components\Domain\Component.txt" />
-    <None Remove="Templates\Angular\Components\Domain\Html.txt" />
-    <None Remove="Templates\Angular\Components\Domain\Scss.txt" />
-    <None Remove="Templates\Angular\Components\Domain\Spec.txt" />
-    <None Remove="Templates\Angular\Components\HubClientServiceConsumer\Component.txt" />
-    <None Remove="Templates\Angular\Components\HubClientServiceConsumer\Html.txt" />
-    <None Remove="Templates\Angular\Components\ListDetail\Component.txt" />
-    <None Remove="Templates\Angular\Components\ListDetail\Html.txt" />
-    <None Remove="Templates\Angular\Components\ListDetail\Scss.txt" />
-    <None Remove="Templates\Angular\Components\ListDetail\Spec.txt" />
-    <None Remove="Templates\Angular\Components\Detail\Component.txt" />
-    <None Remove="Templates\Angular\Components\Detail\Html.txt" />
-    <None Remove="Templates\Angular\Components\Detail\Scss.txt" />
-    <None Remove="Templates\Angular\Components\Detail\Spec.txt" />
-    <None Remove="Templates\Angular\Components\List\Component.txt" />
-    <None Remove="Templates\Angular\Components\List\HTml.txt" />
-    <None Remove="Templates\Angular\Components\List\Scss.txt" />
-    <None Remove="Templates\Angular\Components\List\Spec.txt" />
-    <None Remove="Templates\Angular\http-service.txt" />
-    <None Remove="Templates\Angular\main.txt" />
-    <None Remove="Templates\Angular\Services\HttpService\Service.txt" />
-    <None Remove="Templates\Angular\Services\HttpService\Spec.txt" />
-    <None Remove="Templates\Angular\Services\HubClientService\Service.txt" />
-    <None Remove="Templates\Angular\Services\HubClientService\Spec.txt" />
-    <None Remove="Templates\Angular\SignalRAppMain.txt" />
-    <None Remove="Templates\Api\ConfigureServices.txt" />
-    <None Remove="Templates\Api\DefaultConfigureServices.txt" />
-    <None Remove="Templates\Api\DefaultProgram.txt" />
-    <None Remove="Templates\ArtifactGenerationStrategy.txt" />
-    <None Remove="Templates\BuildingBlocks\Kernel\EntityFrameworkCoreExtensions.txt" />
-    <None Remove="Templates\BuildingBlocks\Kernel\ResponseBase.txt" />
-    <None Remove="Templates\BuildingBlocks\Messaging\Messaging.Udp\ConfigureServices.txt" />
-    <None Remove="Templates\BuildingBlocks\Messaging\Messaging.Udp\IUdpClientFactory.txt" />
-    <None Remove="Templates\BuildingBlocks\Messaging\Messaging.Udp\MessagingClient.txt" />
-    <None Remove="Templates\BuildingBlocks\Messaging\Messaging.Udp\ServiceBusMessageListener.txt" />
-    <None Remove="Templates\BuildingBlocks\Messaging\Messaging.Udp\ServiceBusMessageSender.txt" />
-    <None Remove="Templates\BuildingBlocks\Messaging\Messaging.Udp\UdpClientFactory.txt" />
-    <None Remove="Templates\BuildingBlocks\Messaging\Messaging\IMessagingClient.txt" />
-    <None Remove="Templates\BuildingBlocks\Messaging\Messaging\Internals\Observable.txt" />
-    <None Remove="Templates\BuildingBlocks\Messaging\Messaging\IServiceBusMessage.txt" />
-    <None Remove="Templates\BuildingBlocks\Messaging\Messaging\IServiceBusMessageListener.txt" />
-    <None Remove="Templates\BuildingBlocks\Messaging\Messaging\IServiceBusMessageSender.txt" />
-    <None Remove="Templates\BuildingBlocks\Messaging\Messaging\ReceiveRequest.txt" />
-    <None Remove="Templates\BuildingBlocks\Messaging\Messaging\ServiceBusMessage.txt" />
-    <None Remove="Templates\BuildingBlocks\Security\Security\AccessRight.txt" />
-    <None Remove="Templates\BuildingBlocks\Security\Security\Authentication.txt" />
-    <None Remove="Templates\BuildingBlocks\Security\Security\AuthorizationHeaderParameterOperationFilter.txt" />
-    <None Remove="Templates\BuildingBlocks\Security\Security\AuthorizeResourceOperationAttribute.txt" />
-    <None Remove="Templates\BuildingBlocks\Security\Security\ConfigureServices.txt" />
-    <None Remove="Templates\BuildingBlocks\Security\Security\IPasswordHasher.txt" />
-    <None Remove="Templates\BuildingBlocks\Security\Security\ITokenBuilder.txt" />
-    <None Remove="Templates\BuildingBlocks\Security\Security\ITokenProvider.txt" />
-    <None Remove="Templates\BuildingBlocks\Security\Security\Operations.txt" />
-    <None Remove="Templates\BuildingBlocks\Security\Security\PasswordHasher.txt" />
-    <None Remove="Templates\BuildingBlocks\Security\Security\ResourceOperationAuthorizationBehavior.txt" />
-    <None Remove="Templates\BuildingBlocks\Security\Security\ResourceOperationAuthorizationHandler.txt" />
-    <None Remove="Templates\BuildingBlocks\Security\Security\SecurityConstants.txt" />
-    <None Remove="Templates\BuildingBlocks\Security\Security\TokenBuilder.txt" />
-    <None Remove="Templates\BuildingBlocks\Security\Security\TokenProvider.txt" />
-    <None Remove="Templates\BuildingBlocks\Validation\ConfigureServices.txt" />
-    <None Remove="Templates\BuildingBlocks\Validation\ResponseBase.txt" />
-    <None Remove="Templates\BuildingBlocks\Validation\ValidationBehavior.txt" />
-    <None Remove="Templates\Copyright.txt" />
-    <None Remove="Templates\DddApp\Api\AppSettings.txt" />
-    <None Remove="Templates\DddApp\Core\ConfigureServices.txt" />
-    <None Remove="Templates\DddApp\Infrastructure\ConfigureServices.txt" />
-    <None Remove="Templates\DddApp\Infrastructure\DesignTimeDbContextFactory.txt" />
-    <None Remove="Templates\DddApp\Infrastructure\SeedData.txt" />
-    <None Remove="Templates\README.txt" />
-    <None Remove="Templates\Scss\Actions.txt" />
-    <None Remove="Templates\Scss\Brand.txt" />
-    <None Remove="Templates\Scss\Breakpoints.txt" />
-    <None Remove="Templates\Scss\Buttons.txt" />
-    <None Remove="Templates\Scss\Dialogs.txt" />
-    <None Remove="Templates\Scss\Field.txt" />
-    <None Remove="Templates\Scss\FormFields.txt" />
-    <None Remove="Templates\Scss\Header.txt" />
-    <None Remove="Templates\Scss\HeadingGroup.txt" />
-    <None Remove="Templates\Scss\Label.txt" />
-    <None Remove="Templates\Scss\PageScss.txt" />
-    <None Remove="Templates\Scss\PanelHeading.txt" />
-    <None Remove="Templates\Scss\Pills.txt" />
-    <None Remove="Templates\Scss\RouterLinkActive.txt" />
-    <None Remove="Templates\Scss\Table.txt" />
-    <None Remove="Templates\Scss\Textarea.txt" />
-    <None Remove="Templates\Scss\Title.txt" />
-    <None Remove="Templates\Scss\TitleBar.txt" />
-    <None Remove="Templates\Scss\Variables.txt" />
-    <None Remove="Templates\SpecFlow\DockerControllerHooks.txt" />
-    <None Remove="Templates\SyntaxGenerationStrategy.txt" />
-    <None Remove="Templates\TestHeader.txt" />
-    <None Remove="Templates\Verb.txt" />
-    <None Remove="Templates\Webpack.Config.txt" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <EmbeddedResource Include="Templates\BuildingBlocks\Kernel\DomainException.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Kernel\InternalServerErrorObjectResult.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Kernel\JsonErrorResponse.txt" />
     <EmbeddedResource Include="Templates\Angular\app.component.spec.txt" />
     <EmbeddedResource Include="Templates\Angular\app.component.txt" />
     <EmbeddedResource Include="Templates\Angular\Components\App\Component.txt" />
@@ -173,6 +60,7 @@
     <EmbeddedResource Include="Templates\Api\WebApplicationBuilder.txt" />
     <EmbeddedResource Include="Templates\Api\WebApplication.txt" />
     <EmbeddedResource Include="Templates\Application\Dto.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Kernel\HttpGlobalExceptionFilter.txt" />
     <EmbeddedResource Include="Templates\BuildingBlocks\Kernel\EntityFrameworkCoreExtensions.txt" />
     <EmbeddedResource Include="Templates\BuildingBlocks\Kernel\ResponseBase.txt" />
     <EmbeddedResource Include="Templates\BuildingBlocks\Messaging\Messaging.Udp\ConfigureServices.txt" />
