--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Endpoint.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "ddd-app-create -n FooService -a Group --properties GroupId:Guid,Name:string -d C:\\projects",
+      "commandLineArgs": "db-context-create-from-aggregate-model -d C:\\projects\\MeetupService\\src\\MeetupService.Core",
       "environmentVariables": {
       }
     }
