--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Endpoint.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "db-context-create-from-aggregate-model -d C:\\projects\\MeetupService\\src\\MeetupService.Core",
+      "commandLineArgs": "project-move --dest ..\\BuildingBlocks -d C:\\projects\\Bubble\\src\\EventSourcing",
       "environmentVariables": {
       }
     }
