--- a/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
+++ b/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <None Remove="Templates\Angular\Services\Default\Spec.txt" />
     <None Remove="Templates\EditorConfig.txt" />
+    <None Remove="Templates\ValueObject.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -144,6 +145,7 @@
     <EmbeddedResource Include="Templates\SyntaxGenerationStrategy.txt" />
     <EmbeddedResource Include="Templates\Copyright.txt" />
     <EmbeddedResource Include="Templates\Readme.txt" />
+    <EmbeddedResource Include="Templates\ValueObject.txt" />
     <EmbeddedResource Include="Templates\Webpack.Config.txt" />
     <EmbeddedResource Include="Templates\Verb.txt" />
   </ItemGroup>
