--- a/src/Endpoint.Core/Endpoint.Core.csproj
+++ b/src/Endpoint.Core/Endpoint.Core.csproj
@@ -43,6 +43,7 @@
     <PackageReference Include="System.Collections" Version="4.3.0" />
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="SharpSimpleNLG" Version="1.3.0" />
+    <PackageReference Include="System.IO.Abstractions" Version="19.2.51" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
     <PackageReference Include="System.Reactive.Linq" Version="5.0.0" />
     <PackageReference Include="TextCopy" Version="6.2.1" />
