--- a/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
+++ b/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
@@ -18,6 +18,7 @@
     <None Remove="Templates\Catch2.txt" />
     <None Remove="Templates\EditorConfig.txt" />
     <None Remove="Templates\EsProj.txt" />
+    <None Remove="Templates\Lit\LitIndexHtml.txt" />
     <None Remove="Templates\Lit\LitPackageJson.txt" />
     <None Remove="Templates\Lit\LitTsConfigJson.txt" />
     <None Remove="Templates\Lit\LitWebpackConfig.txt" />
@@ -139,6 +140,7 @@
     <EmbeddedResource Include="Templates\Infrastructure\SeedData.txt" />
     <EmbeddedResource Include="Templates\IntegrationTests\ApiTest.txt" />
     <EmbeddedResource Include="Templates\IntegrationTests\WebApplicationFactory.txt" />
+    <EmbeddedResource Include="Templates\Lit\LitIndexHtml.txt" />
     <EmbeddedResource Include="Templates\Lit\LitTsConfigJson.txt" />
     <EmbeddedResource Include="Templates\Lit\LitWebpackConfig.txt" />
     <EmbeddedResource Include="Templates\Lit\LitPackageJson.txt" />
