--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Endpoint.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "lit-workspace-create -n Tower -d C:\\projects",
+      "commandLineArgs": "record-create -n Tower -d C:\\projects\\Taliban\\src\\Taliban",
       "environmentVariables": {
         "Endpoint:DefaultCommand": ""
       }
