--- a/src/Endpoint.Core/Endpoint.Core.csproj
+++ b/src/Endpoint.Core/Endpoint.Core.csproj
@@ -53,6 +53,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="DomainEvents\" />
+    <Folder Include="Notifications\" />
+    <Folder Include="Syntax\Cqrs\" />
     <Folder Include="Syntax\Statements\" />
     <Folder Include="Syntax\RouteHandlers\Create\" />
     <Folder Include="Syntax\SpecFlow\Services\" />
