--- a/src/Endpoint.Core/Endpoint.Core.csproj
+++ b/src/Endpoint.Core/Endpoint.Core.csproj
@@ -54,6 +54,8 @@
 
   <ItemGroup>
     <Folder Include="Events\" />
+    <Folder Include="Syntax\Namespaces\Factories\" />
+    <Folder Include="Syntax\Namespaces\Strategies\" />
     <Folder Include="Syntax\Properties\Factories\" />
     <Folder Include="Syntax\Statements\" />
     <Folder Include="Syntax\RouteHandlers\Create\" />
