--- a/src/Endpoint.Cli/Endpoint.Cli.csproj
+++ b/src/Endpoint.Cli/Endpoint.Cli.csproj
@@ -19,6 +19,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <UserSecretsId>06c49638-0786-4731-9c6b-3921161c01b5</UserSecretsId>
     <PackageId>Quinntyne.Endpoint.Cli</PackageId>
+    <NoWarn>1998;4014</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
