--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Endpoint.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "class-from-plant-uml-create -n ClassFrom -d C:\\projects\\Endpoint\\src\\Endpoint.Cli\\Commands",
+      "commandLineArgs": "service-create -n Win1 -d C:\\projects\\CppDom\\src\\CppDom.Core",
       "environmentVariables": {
         "Endpoint:DefaultCommand": ""
       }
